--- a/Client/package.json
+++ b/Client/package.json
@@ -22,7 +22,10 @@
     "@ngrx/entity": "^18.0.0",
     "@ngrx/store": "^18.0.0",
     "@ngrx/store-devtools": "^18.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
